[package]
authors = ["The Rust Project Developers"]
description = "Complex numbers implementation for Rust"
documentation = "https://docs.rs/num-complex"
homepage = "https://github.com/rust-num/num-complex"
keywords = ["mathematics", "numerics"]
categories = [ "algorithms", "data-structures", "science" ]
license = "MIT/Apache-2.0"
name = "num-complex"
repository = "https://github.com/rust-num/num-complex"
version = "0.1.41"
readme = "README.md"

[dependencies]
serde = { git = "https://github.com/ekiden/serde" }
num-traits = { path = "/sgx/third_party/num/traits" }
sgx_tstd = { path = "/sgx//sgx_tstd" }

[features]
default = []
unstable = []
